--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Engenharia de Software II</h1>
     <p>Olá Mundo feito por Pedro Lima</p>
+    <p>Hello, World! feito por Vicenzo Rodrigues Goulart</p>
 </body>
 </html>
