atualizaçao2 index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Engenharia de Software II</h1>
     <p>Olá Mundo feito por Pedro Lima</p>
     <p>Hello, World! feito por Vicenzo Rodrigues Goulart</p>
+    <p>Hello, World! feito por Eduardo Amarante</p>
 </body>
 </html>
