Alteração_Feita_Por_Vitor

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Olá Mundo feito por Pedro Lima</p>
     <p>Hello, World! feito por Vicenzo Rodrigues Goulart</p>
     <p>Hello, World! feito por Eduardo Amarante</p>
+    <p>Olá Mundo! feito por Vitor Macedo</p>
 </body>
 </html>
