--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Engenharia de Software II</h1>
+    <h2>Turma: 3 semestre Manhã</h2>
     <p>Olá Mundo feito por Pedro Lima</p>
     <p>Hello, World! feito por Vicenzo Rodrigues Goulart</p>
     <p>Hello, World! feito por Eduardo Amarante</p>
